--- a/css_11/estilo.css
+++ b/css_11/estilo.css
@@ -1,1 +1,11 @@
-as
+body{
+	padding:0px;
+	margin:0px;	  
+	background-color: #e8e6e6 
+}
+
+h1{
+  font-family:Helvetica, Geneva, Arial,
+			  SunSans-Regular, sans-serif;
+
+	}
